reimplemented multi-wallet service into mainstream builds
