@@ -68,7 +68,8 @@ namespace CryptoNote
     bool listTransfers(const std::vector<std::string> &args);
 	bool sign(const std::vector<std::string> &args);
 	bool verify(const std::vector<std::string> &args);
-    bool create_integrated(const std::vector<std::string> &args = std::vector<std::string>());
+ bool show_outgoing_transfers(const std::vector<std::string> &args);   
+ bool create_integrated(const std::vector<std::string> &args = std::vector<std::string>());
     bool export_keys(const std::vector<std::string> &args = std::vector<std::string>());
     bool export_tracking_key(const std::vector<std::string> &args = std::vector<std::string>());
     bool transfer(const std::vector<std::string> &args);
